fix: Tooltips not showing due to sidebar overflow hidden

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -388,7 +388,7 @@ select.form-input {
     display: flex;
     flex-direction: column;
     z-index: 100;
-    overflow: hidden;
+    overflow: visible;
     white-space: nowrap;
 }
 
